--- a/media.html
+++ b/media.html
@@ -23,6 +23,7 @@
             border: 5px solid #E1FFBB;
             border-radius: 10px;
             padding: 15px;
+            background-color: #5b3d78;
         }
         nav {
             display: flex;
