updated both pages

--- a/media.html
+++ b/media.html
@@ -47,7 +47,7 @@
     <section style="margin: 15px;">
         <nav>
             <h1 style="text-align: left; font-size: 30px;">My Media</h1>
-            <a href="./table.html">Home Page</a>
+            <a href="table.html">Home Page</a>
         </nav>
         <div style="display: flex; align-items: center; justify-content: space-between; padding: 10px; margin-bottom: 30px;">
             <p style="flex: .9; margin-right: 12px; line-height: 35px;">My name is Victor Iberi, born in Lagos, Nigeria. I attended Royal Crown Comprehensive High school in Lagos and later went on to study Geography and Environmental Management at Imo State University, Owerri. In 2018, I bagged a masters degree in Geography from the University of Ibadan, Nigeria. I have always been keen on starting a career in tech, so much so that in the last 3 years, I have taken a number of courses on Udemy and Youtube and read many documentations online. Some of the technologies I learned include; Python, Javascript, PHP, HTML, CSS, JQuery, React.Js, Next.Js, Figma, Sketch, AdobeXD, Photoshop, Adobe Illustrator, Canva, tailwind css, Vue.Js, NodeJS, MongoDB, MySQL and Kotlin. It's quite evident that I was all over the place, and frequently got overwhelmed. I applied to Altschool's School of Engineering for two (2) main reasons. The first was that I desperately needed focus to gain mastery in a specific niche. The second reason I applied to study at Altschool was the community interaction and collaborative component the program offers. Upon completion of this Frontend Engineering Course, I intend to secure a high paying Job, where I would utilize the skills gained here and launch a rewarding tech career.</p>
