--- a/table.html
+++ b/table.html
@@ -74,7 +74,7 @@
             </tbody>
         </table>
         <br><br>
-        <a href="./media.html">View Media</a>
+        <a href="media.html">View Media</a>
     </section>
 </body>
 </html>
